--- a/index.html
+++ b/index.html
@@ -25,6 +25,10 @@
 
     <div class="player">
       <p id="song-title">Disarankan Di Bandung</p>
+      <div class="progress-container">
+  <div class="progress"></div>
+</div>
+
       <audio id="audio"></audio>
 
       <div class="controls">
