--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="id">
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -9,25 +9,38 @@
 
 <body>
 
-<canvas id="particles"></canvas>
+<!-- LOGIN -->
+<div class="lock" id="lock">
+  <div class="lock-box">
+    <h2>Enter Key</h2>
+    <input type="password" id="keyInput" placeholder="Key akses">
+    <button onclick="unlock()">Unlock</button>
+    <p id="error"></p>
+  </div>
+</div>
 
-<div class="card">
+<!-- MAIN -->
+<canvas id="particles"></canvas>
+<canvas id="visualizer"></canvas>
+
+<div class="card hidden" id="main">
   <img src="assets/avatar.png" class="avatar">
   <h1>Anntarr <span class="verified">✔</span></h1>
   <p class="bio">Stay silent, Let success speak.</p>
 
   <div class="links">
-    <a href="#" class="btn">Telegram</a>
-    <a href="#" class="btn">GitHub</a>
-    <a href="#" class="btn">WhatsApp</a>
+    <a class="btn">Telegram</a>
+    <a class="btn">GitHub</a>
+    <a class="btn">WhatsApp</a>
   </div>
 
-  <div class="player">
-    <div class="song-title" id="songTitle">Kota ini tak sama tanpamu</div>
+  <!-- PLAYLIST -->
+  <div class="playlist" id="playlist"></div>
 
-    <div class="progress-container">
-      <div class="progress"></div>
-    </div>
+  <!-- PLAYER -->
+  <div class="player">
+    <div class="song-title" id="songTitle"></div>
+    <div class="progress-container"><div class="progress"></div></div>
 
     <div class="controls">
       <button onclick="prevSong()">⏮</button>
