--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <canvas id="particles"></canvas>
 <canvas id="visualizer"></canvas>
 
-<div class="card hidden" id="main">
+<div class="card" id="main">
   <img src="assets/avatar.png" class="avatar">
   <h1>Anntarr <span class="verified">✔</span></h1>
   <p class="bio">Stay silent, Let success speak.</p>
