--- a/index.html
+++ b/index.html
@@ -6,32 +6,27 @@
 <title>Anntarr</title>
 <link rel="stylesheet" href="style.css">
 </head>
-
 <body>
 
-<!-- MAIN -->
 <canvas id="particles"></canvas>
 <canvas id="visualizer"></canvas>
 
 <div class="card" id="main">
   <img src="assets/avatar.png" class="avatar">
   <h1>Anntarr <span class="verified">✔</span></h1>
-  <p class="bio">Stay silent, Let success speak.</p>
+  <p class="bio">Stay silent, let success speak.</p>
 
   <div class="links">
-    <a class="btn">Telegram</a>
-    <a class="btn">GitHub</a>
-    <a class="btn">WhatsApp</a>
+    <a href="#" class="btn">Telegram</a>
+    <a href="#" class="btn">GitHub</a>
+    <a href="#" class="btn">WhatsApp</a>
   </div>
 
-  <!-- PLAYLIST -->
   <div class="playlist" id="playlist"></div>
 
-  <!-- PLAYER -->
   <div class="player">
-    <div class="song-title" id="songTitle"></div>
+    <div class="song-title" id="songTitle">Pilih lagu</div>
     <div class="progress-container"><div class="progress"></div></div>
-
     <div class="controls">
       <button onclick="prevSong()">⏮</button>
       <button onclick="togglePlay()">▶</button>
@@ -40,8 +35,7 @@
   </div>
 </div>
 
-<footer>© 2025 anntarr — All rights reserved.</footer>
-
 <script src="script.js"></script>
 </body>
 </html>
+
