--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <canvas id="particles"></canvas>
 <canvas id="visualizer"></canvas>
 
-<div class="card" id="main">
+<div class="card">
   <img src="assets/avatar.png" class="avatar">
   <h1>Anntarr <span class="verified">✔</span></h1>
   <p class="bio">Stay silent, let success speak.</p>
@@ -25,7 +25,7 @@
   <div class="playlist" id="playlist"></div>
 
   <div class="player">
-    <div class="song-title" id="songTitle">Pilih lagu</div>
+    <div class="song-title" id="songTitle">Klik lagu lalu ▶</div>
     <div class="progress-container"><div class="progress"></div></div>
     <div class="controls">
       <button onclick="prevSong()">⏮</button>
