--- a/index.html
+++ b/index.html
@@ -133,7 +133,7 @@ body{
 
  <!-- ===== PROFILE (STATIS) ===== -->
  <div class="profile">
-  <img src="assets/avatar.jpg">
+  <img src="assets/avatar.png">
   <h1>altharizz</h1>
   <p>personal music space</p>
 
