--- a/index.html
+++ b/index.html
@@ -194,6 +194,12 @@ body{
  <input class="volume" type="range" min="0" max="1" step="0.01"
   value="1" oninput="audio.volume=this.value">
 
+<!-- FOOTER -->
+<footer class="footer">
+ © 2025 anntanr - All rights reserved
+</footer>
+
+ 
 </div>
 
 <audio id="audio"></audio>
