--- a/index.html
+++ b/index.html
@@ -196,7 +196,7 @@ body{
 
 <!-- FOOTER -->
 <footer class="footer">
- © 2025 anntanr - All rights reserved
+ © 2025 anntanr — All rights reserved
 </footer>
 
  
