--- a/index.html
+++ b/index.html
@@ -175,6 +175,11 @@ body{
    <div class="title">Ngga Dulu - ciloqciliq, Zynakal, Akbar Chalay</div>
   </div>
 
+   <div class="slide">
+   <img class="cover" src="assets/cover4.jpg">
+   <div class="title">Menerima Luka - Natasya Sabella</div>
+  </div>
+
  </div>
 
  <!-- CONTROLS -->
@@ -208,7 +213,8 @@ body{
 const songs=[
  {src:"assets/song1.mp3"},
  {src:"assets/song2.mp3"},
- {src:"assets/song3.mp3"}
+ {src:"assets/song3.mp3"},
+ {src:"assets/song4.mp3"}
 ];
 
 let index=0;
