--- a/index.html
+++ b/index.html
@@ -258,6 +258,11 @@ function format(t){
 loadSong(0);
 </script>
 
+ <div id="miniPuzzleContainer" style="margin: 50px auto; max-width: 450px;">
+  <h2 style="text-align:center;">Mini Puzzle - Memory Game</h2>
+  <div class="miniPuzzleBoard"></div>
+</div>
+ 
 </body>
 </html>
 
