--- a/index.html
+++ b/index.html
@@ -175,11 +175,16 @@ body{
    <div class="title">Ngga Dulu - ciloqciliq, Zynakal, Akbar Chalay</div>
   </div>
 
-   <div class="slide">
+  <div class="slide">
    <img class="cover" src="assets/cover4.jpg">
    <div class="title">Menerima Luka - Natasya Sabella</div>
   </div>
 
+ <div class="slide">
+   <img class="cover" src="assets/cover5.jpg">
+   <div class="title">Berubah - Tenxii</div>
+  </div>
+  
  </div>
 
  <!-- CONTROLS -->
@@ -214,7 +219,8 @@ const songs=[
  {src:"assets/song1.mp3"},
  {src:"assets/song2.mp3"},
  {src:"assets/song3.mp3"},
- {src:"assets/song4.mp3"}
+ {src:"assets/song4.mp3"},
+ {src:"assets/song5.mp3"}
 ];
 
 let index=0;
