--- a/index.html
+++ b/index.html
@@ -139,14 +139,14 @@ body{
 
   <div class="intro">
    Halo, saya <b>altharizz</b>.  
-   Saya adalah web designer dan bot creator
-   yang menyediakan berbagai jasa seperti
-   pembuatan web atau bot, saya juga peminat
-   music oleh karena itu web ini saya buat untuk
-   anda agar bisa lebih mudah untuk menemukan 
-   contact saya dan sekaligus mendengarkan music yang
-   ada di playlist saya.
-   Order? langsung saja contact admin
+   Saya adala web designer dan bot developer
+   yang berfokus pada desain bersih dan sistem
+   yang efisien. Saya telah menguasai HTML, CSS, 
+   JavaScript, dan Python untuk membangun web modern
+   serta bot yang terstruktur. Musik menjadi ruang tenang
+   salam proses kreatif saya.
+
+   Reach Me Bellow.
   </div>
 
   <div class="contact">
