--- a/index.html
+++ b/index.html
@@ -184,6 +184,16 @@ body{
    <img class="cover" src="assets/cover5.jpg">
    <div class="title">Berubah - Tenxii</div>
   </div>
+
+  <div class="slide">
+   <img class="cover" src="assets/cover6.jpg">
+   <div class="title">SO ASUU - NayKilla</div>
+  </div>
+
+ <div class="slide">
+   <img class="cover" src="assets/cover7.jpg">
+   <div class="title">Kasih Tau Mama - Rombongan Bodong Koplo</div>
+  </div>
   
  </div>
 
@@ -220,7 +230,9 @@ const songs=[
  {src:"assets/song2.mp3"},
  {src:"assets/song3.mp3"},
  {src:"assets/song4.mp3"},
- {src:"assets/song5.mp3"}
+ {src:"assets/song5.mp3"},
+ {src:"assets/song6.mp3"},
+ {src:"assets/song7.mp3"}
 ];
 
 let index=0;
